Add exercises for each section