@@ -73,6 +73,45 @@ longer need.
 ## Class loading
 - Classes load lazily on first use via a hierarchy of **class loaders** (Bootstrap →
   Platform → Application). `static` initializers run once, at class init time.
+- Three phases, in order: **Loading** (find the bytecode, create a `Class` object),
+  **Linking** — itself three sub-steps: **Verify** (bytecode is valid/safe), **Prepare**
+  (allocate static fields, zero them), **Resolve** (symbolic references → direct
+  references), then **Initialization** (run `static` initializers/blocks, top to bottom,
+  exactly once, triggered by first active use — `new`, a static method call, a static
+  field access that isn't a compile-time constant).
+
+```java
+class Lazy {
+    static { System.out.println("Lazy class initialized"); }  // runs once, on first real use
+}
+// nothing printed yet — merely mentioning the class name (e.g. in a comment) doesn't trigger it
+Lazy.class.getName();     // still doesn't trigger initialization — reflection metadata only
+new Lazy();                // NOW "Lazy class initialized" prints, exactly once ever
+new Lazy();                // no output — already initialized
+```
+
+## `StackOverflowError` vs `OutOfMemoryError`
+- **`StackOverflowError`**: a thread's call stack (fixed size, see `-Xss`) is exhausted —
+  almost always uncontrolled/too-deep recursion (missing or wrong base case).
+- **`OutOfMemoryError`**: the heap (or metaspace) can't satisfy an allocation even after a
+  full GC — too many live objects, or a genuine leak (module 07's reachability leaks).
+Both are subclasses of `Error`, not `Exception` — technically catchable, but you almost
+never should (the JVM may already be in a bad state, especially for OOM).
+
+## Useful JVM flags to know by name (not memorize syntax)
+
+| Flag | Purpose |
+|------|---------|
+| `-Xms` / `-Xmx` | initial / maximum heap size |
+| `-Xss` | per-thread stack size (tune before "fixing" a StackOverflowError by adding memory) |
+| `-XX:+UseG1GC` / `-XX:+UseZGC` | pick a garbage collector |
+| `-XX:+HeapDumpOnOutOfMemoryError` | dump the heap for post-mortem analysis on OOM |
+| `-verbose:class` | log every class as it's loaded — see the lazy-loading behavior live |
+
+## Profiling & diagnostic tools worth naming in an interview
+`jstack` (thread dumps — diagnose deadlocks/hangs), `jmap`/`jcmd` (heap dumps/histograms),
+`jconsole`/`VisualVM`/Java Flight Recorder (live monitoring, allocation profiling), and
+`async-profiler` for low-overhead production CPU/allocation profiling.
 
 ## Interview one-liners
 - Stack vs heap: primitives/refs on stack, objects on heap.
@@ -80,6 +119,29 @@ longer need.
 - Can Java leak memory? Yes — unintended reachability.
 - What are GC roots? Live stack refs, static fields, JNI refs.
 - What is the JIT? Runtime native compilation of hot bytecode.
+
+## Practice exercise — from scratch
+
+Open [`Exercise.java`](Exercise.java). Deterministic experiments about JVM behavior:
+
+1. `depthAtStackOverflow()` — TODO: recurse with an accumulating depth counter until a
+   `StackOverflowError` is thrown, catch it, and return the depth reached. No exact
+   number is asserted (it depends on the machine/thread stack size) — just that it's
+   large and positive, proving the stack is finite and the error is catchable.
+2. `initCount` / `touchLazy()` — TODO: demonstrate that a class's `static` initializer
+   runs exactly once. `Lazy` and its counter are given; implement `touchLazy()` to
+   trigger initialization by actually instantiating it. (`main` deliberately never reads
+   `Lazy.initCount` before the first `touchLazy()` call — merely reading a non-constant
+   static field is itself a triggering event, so checking "is it 0 yet?" would trigger
+   the very initialization being observed.)
+3. `identityVsEquality()` — TODO: return a 3-element boolean array proving: (a) two
+   equal-but-distinct `Point` records have *different* `System.identityHashCode`s, (b)
+   they *do* have equal `.hashCode()` (records generate value-based hashing), (c) the
+   same reference has a stable `identityHashCode` across two calls.
+
+```bash
+java -ea 07-jvm-memory/Exercise.java
+```
 
 ## Inspect your own runtime
 
